--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^4.3.1",
     "aws-amplify": "^1.0.10",
     "bootstrap": "^3.3.7",
+    "jest": "^24.9.0",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.0",
