--- a/assets/package.json
+++ b/assets/package.json
@@ -28,7 +28,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@testing-library/react": "^11.2.7"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
